--- a/hulsa/css/blogs.css
+++ b/hulsa/css/blogs.css
@@ -1,5 +1,6 @@
+
 .main-blog-post{
-  padding: 50px;
+  padding: 50px 200px;
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: 10px;
@@ -11,7 +12,7 @@
   border-radius: 10px;
 }
 .blogs{
-  padding: 50px;
+  padding: 50px 150px;
 }
 .blogs-grid{
   display: grid;
